Trying to fix the logo problems on mobile/tablet to make everything fit

--- a/_assets/stylesheets/frontend/_theme_override.css.scss
+++ b/_assets/stylesheets/frontend/_theme_override.css.scss
@@ -188,15 +188,38 @@
 
 .footer-logo {
   img {
+    float: left;
     margin-right: 2em;
     width: 120px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   #contact-form-error,
   #contact-form-success {
     width: 100%;
     text-align: left;
+  }
+
+  .cbp-af-header h1 a {
+    font-size: 16px;
+    line-height: 30px;
+    margin: 1.3em 0;
+
+    img {
+      width: 28px;
+    }
+  }
+
+  .footer-logo img {
+    float: none;
+    margin: 0;
+    width: 80px;
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .cbp-af-header h1, .cbp-af-header .nav a {
+    margin-left: 0;
   }
 }
